--- a/misc.html
+++ b/misc.html
@@ -41,9 +41,20 @@ Journal of Artificial Intelligence Research (JAIR), Journal of Scientific Comput
 <li><p>President of Korean Basketball Association at Stanford</p>
 </li>
 </ul>
+<h2>Collaborators</h2>
+<ul>
+<li><p>AWS AI Labs: Bernie Wang, Jan Gasthaus, Tim Januschowski, etc.  </p>
+</li>
+<li><p>Amazon: Dean Forster, Dominik Janzing, etc.</p>
+</li>
+<li><p>Acamedia: Stephen Boyd (Stanford), Jure Leskovec (Stanford), Hongseok Namkoong (Columbia B. Scool), Ernest Ryu (SNU).</p>
+</li>
+<li><p>Interns: Arun Jambulapati (Stanford), Shantnu Gupta (CMU) Taeho Yoon (SNU), Yucheng Lu (Cornell) Xiaoyong Jin (UCSB).</p>
+</li>
+</ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-03 04:51:19 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-18 11:37:30 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
