--- a/acknowledgement_lossy.html
+++ b/acknowledgement_lossy.html
@@ -13,7 +13,7 @@
 <p>This is the final project report of EE 376C, <i>Universal Schemes in Information Theory</i>, at Stanford university in 2014. We thank both the class TA, Albert No, and instructor, Prof. Tsachy Weissman, who proposed the basic idea of this project and advised this work during the quarter. </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-03 04:51:19 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-18 11:47:28 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
