--- a/coursework.html
+++ b/coursework.html
@@ -35,7 +35,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-03 04:51:19 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-18 11:47:28 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
