--- a/internship.html
+++ b/internship.html
@@ -12,11 +12,11 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">Youngsuk Park</div>
-<div class="menu-item"><a href="index.html" class="current">Home</a></div>
+<div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="research_by_year.html">Research</a></div>
 <div class="menu-item"><a href="coursework.html">Coursework</a></div>
 <div class="menu-item"><a href="resume.html">CV/Resume</a></div>
-<div class="menu-item"><a href="internship.html">Internship&nbsp;Opp.</a></div>
+<div class="menu-item"><a href="internship.html" class="current">Internship&nbsp;Opp.</a></div>
 <div class="menu-item"><a href="misc.html">Misc</a></div>
 </td>
 <td id="layout-content">
@@ -47,7 +47,7 @@ in top-tier ML/AI conferences, e.g., ICML, NeurIPS, ICLR, AISTATS, KDD</p>
 <p>If you are also interested in the areas of personalization, recommendation systems, time series anomaly, feel free to contact so that I can forward to the proper teams.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-03 04:51:19 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-18 11:47:28 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
