update research page

--- a/research_by_year.html
+++ b/research_by_year.html
@@ -38,40 +38,40 @@ Under review. </p>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2102.06828">Domain Adaptation for Time Series Forecasting via Attention Sharing.</a><br /> 
-X. Jin, <b>Y. Park</b>, D, Robinson, Y. Wang.<br />
+X. Jin, <b>Y. Park</b>, D. Robinson, Y. Wang.<br />
 Under review. 
 </p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2111.06581">Learning the Quantile Functions without Quantile Crossing for Distribution-free Time Series Forecasting.</a><br /> 
-<b>Y. Park</b>, D. Robinson, Y. Wang, J. Gasthaus.<br />
-To appear in <i>International Conference on Artificial Intelligence and Statistics (AISTATS)</i>, 2022.</p>
+<li><p><a href="https://arxiv.org/abs/2111.06581">Learning Quantile Functions without Quantile Crossing for Distribution-free Time Series Forecasting.</a><br /> 
+<b>Y. Park</b>, D. Robinson, J. Gasthaus, Y. Wang.<br />
+<i>Proceedings of International Conference on Artificial Intelligence and Statistics (AISTATS)</i>, 2022.</p>
 </li>
 </ul>
 <ul>
-<li><p>Multivariate Quantile Functions for Forecasting.<br />
+<li><p><a href="https://arxiv.org/abs/2202.11316">Multivariate Quantile Functions for Forecasting.</a><br />
 K. Kan, F. Aubet, T. Januschowski, <b>Y. Park</b>, K. Benidis, J. Gasthaus.<br />
-To appear in <i>International Conference on Artificial Intelligence and Statistics (AISTATS)</i>, 2022. <br />
+<i>Proceedings of International Conference on Artificial Intelligence and Statistics (AISTATS)</i>, 2022. <br />
 <b>Selected as an oral, 2.6% of all submissions.</b></p>
 </li>
 </ul>
 <ul>
-<li><p>Robust Probabilistic Time Series Forecasting.<br />
+<li><p><a href="https://arxiv.org/abs/2202.11910">Robust Probabilistic Time Series Forecasting.</a><br />
 T. Yoon, <b>Y. Park</b>, E. Ryu, Y. Wang.<br />
-To appear in <i>International Conference on Artificial Intelligence and Statistics (AISTATS)</i>, 2022.</p>
+<i>Proceedings of International Conference on Artificial Intelligence and Statistics (AISTATS)</i>, 2022.</p>
 </li>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2103.02062">Variance Reduced Training with Stratified Sampling for Forecasting Models.</a><br />
 Y. Lu, <b>Y. Park</b>, L. Cheng, Y. Wang, D. Foster.<br />
-<i>Proceedings of International Conference on Machine Learning</i> (ICML), 2021.<br /></p>
+<i>Proceedings of International Conference on Machine Learning (ICML)</i>, 2021.<br /></p>
 </li>
 </ul>
 <ul>
 <li><p><a href="http://proceedings.mlr.press/v119/park20c/park20c.pdf">Structured Policy Iteration for Linear Quadratic Regulator.</a> <br />
 <b>Y. Park</b>, Z. Wen, R. Rossi, G. Wu, H. Zhao.<br />
-<i>Proceedings of International Conference on Machine Learning</i> (ICML), 2020.<br />
+<i>Proceedings of International Conference on Machine Learning (ICML)</i>, 2020.<br />
 [<a href="papers/spi_lqr_slide.pdf">Slide</a>], [<a href="papers/spi_lqr_supp.pdf">Supplementary materials</a>], [<a href="https://arxiv.org/abs/2007.06202">arXiv</a>]</p>
 </li>
 </ul>
@@ -85,7 +85,7 @@ J. Kim, <b>Y. Park</b>, J. Fox, S. Boyd, and W. Dally. <br />
 <li><p><a href="https://arxiv.org/abs/1910.07056">Variable Metric Proximal Gradient Method with Diagonal Barzilai-Borwein Stepsize.</a> <br />
 <b>Y. Park</b>, S. Dhar, S. Boyd, and M. Shah. <br />
 <i>Proceedings of International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</i>, 2020. <br /> 
-[<a href="https://arxiv.org/abs/1910.07056">arXiv (long version)</a>], [<a href="papers/vmpg_icassp.pdf">ICASSP</a>], [<a href="http://www.stanford.edu/~youngsuk/papers/nips_vmpg.pdf">NeurIPS Workshop</a>]</p>
+[<a href="https://arxiv.org/abs/1910.07056">arXiv (long version)</a>], [<a href="papers/vmpg_icassp.pdf">ICASSP version</a>]</p>
 </li>
 </ul>
 <ul>
@@ -131,7 +131,7 @@ H. Maei and <b>Y. Park</b>,
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-18 11:47:28 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-03-08 21:50:11 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
