update website in July

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 <td id="layout-menu">
 <div class="menu-category">Youngsuk Park</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="research_by_year.html">Research</a></div>
-<div class="menu-item"><a href="coursework.html">Coursework</a></div>
+<div class="menu-item"><a href="research.html">Research</a></div>
 <div class="menu-item"><a href="resume.html">CV/Resume</a></div>
 <div class="menu-item"><a href="internship.html">Internship&nbsp;Opp.</a></div>
 <div class="menu-item"><a href="misc.html">Misc</a></div>
@@ -33,18 +32,22 @@ Ph.D. <a href="http://ee.stanford.edu/">Department of Electrical Engineering</a>
 </td></tr></table>
 <h2>Contact</h2>
 <p>Office: 2795 Augustine Dr, Santa Clara, CA 95054<br />
-Professional email: <a href="mailto:pyoungsu@amazon.com">pyoungsu@amazon.com</a><br />
-Personal email: <a href="mailto:youngsuk@cs.stanford.edu">youngsuk@cs.stanford.edu</a><br />
-<a href="https://www.linkedin.com/in/y-park/">Linkedin Profile</a>
+
+Email: <a href="mailto:youngsuk@cs.stanford.edu">youngsuk@cs.stanford.edu</a><br />
+<a href="https://www.linkedin.com/in/y-park/">Linkedin</a>
 </p>
 <h2>News</h2>
 <div class="infoblock">
 <div class="blockcontent">
-<p>Jan. 2022. Mutivariate Quantile Function Forecaster was selcted as an <b>oral presentation, 2.6% of all submissions</b>. </p>
+<p>July. 2022. The work on robust multivariate probabilistic forecasting appears at KDD Time-Series workshop. </p>
 </div></div>
 <div class="infoblock">
 <div class="blockcontent">
-<p>Jan. 2022. All three papers submitted to AISTATS on uncertainty quantification, quantile regressions, and robust forecasting got accepted. </p>
+<p>June. 2022. We organize KDD workshop on <a href="https://kdd-milets.github.io/milets2022/">Mining and Learning from Time Series &ndash; Deep Forecasting: Models, Interpretability, and Applications.</a> </p>
+</div></div>
+<div class="infoblock">
+<div class="blockcontent">
+<p>May. 2022. The paper on domain adaptation for time series forecasting was accepted at ICML 2022. </p>
 </div></div>
 <h2>Research Interests</h2>
 <ul>
@@ -94,7 +97,7 @@ Personal email: <a href="mailto:youngsuk@cs.stanford.edu">youngsuk@cs.stanford.e
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-18 11:47:28 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-07-29 22:26:07 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
