--- a/internship.html
+++ b/internship.html
@@ -13,8 +13,7 @@
 <td id="layout-menu">
 <div class="menu-category">Youngsuk Park</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="research_by_year.html">Research</a></div>
-<div class="menu-item"><a href="coursework.html">Coursework</a></div>
+<div class="menu-item"><a href="research.html">Research</a></div>
 <div class="menu-item"><a href="resume.html">CV/Resume</a></div>
 <div class="menu-item"><a href="internship.html" class="current">Internship&nbsp;Opp.</a></div>
 <div class="menu-item"><a href="misc.html">Misc</a></div>
@@ -23,31 +22,31 @@
 <div id="toptitle">
 <h1>Internship Opportunities</h1>
 </div>
-<h2>About internship</h2>
-<p>ML and Forecast science team at AWS AI Labs is looking for motivated research interns for summer 2022. The internship is minimum 12-14 weeks and requires PhD candidacy in relevant areas. The main goal of this internship is to develop scalable and reliable time series analysis methods, reflecting various empirical or theoretical machine learning topics, along with some publication artifacts in venues of top-tier conferences or journals at the end of internship.</p>
+<h2>About Internship</h2>
+<p>ML and Forecast science team at AWS AI Labs is looking for motivated research interns for summer 2022. The internship is minimum 12-14 weeks and requires PhD candidacy in relevant areas. The main goal of this internship is to develop scalable and reliable time series analysis methods, reflecting various empirical or theoretical machine learning topics, along with some publication artifacts in venues of top-tier conferences at the end of internship.</p>
 <h2>About ML and Forecast Science team in AWS AI Labs</h2>
 <p>Regarding to our team, please refer to our recent work in <a href="https://github.com/awslabs/gluon-ts/blob/master/REFERENCES.md">selected papers</a>.</p>
-<h2>Ideal candidates</h2>
-<p>have a strong background in one or more of the following machine learning areas, but not limited to,</p>
+<h2>Ideal Quality of Candidates</h2>
+<p>Strong background in one or more of the following machine learning areas, but not limited to,</p>
 <ul>
-<li><p>explainable AI, causal inference</p>
+<li><p>explainable AI, causal inference,</p>
 </li>
-<li><p>Seq2Seq deep learning models (Transformer, GPT-3)</p>
+<li><p>large scale representation learning,</p>
 </li>
-<li><p>robust optimization, domain adaptation, fairness, distrbution shift or Out-of-Distribution (OOD)</p>
+<li><p>robust modeling against perturbations, e.g., adversarial attack, distribution shift,</p>
 </li>
-<li><p>off-policy for reinforcement learning</p>
+<li><p>off-policy for reinforcement learning, what-if analysis,</p>
 </li>
 </ul>
-<p>and preferably have publication records in
-in top-tier ML/AI conferences, e.g., ICML, NeurIPS, ICLR, AISTATS, KDD</p>
+<p>preferably with publication records in
+in top-tier ML/AI conferences, e.g., ICML, NeurIPS, ICLR, AISTATS, KDD.</p>
 <h2>Applications</h2>
 <p>If you are interested, feel free to send <a href="mailto:youngsuk@cs.stanford.edu">youngsuk@cs.stanford.edu</a> an email attached with your C.V. and short introduction.</p>
 <h1>Misc.</h1>
-<p>If you are also interested in the areas of personalization, recommendation systems, time series anomaly, feel free to contact so that I can forward to the proper teams.</p>
+<p>If you are also interested in the areas of personalization, recommendation systems, time series anomaly, feel free to reach me out so that I can forward to the teams of interest.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-18 11:47:28 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-07-29 22:26:07 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
