--- a/misc.html
+++ b/misc.html
@@ -13,8 +13,7 @@
 <td id="layout-menu">
 <div class="menu-category">Youngsuk Park</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="research_by_year.html">Research</a></div>
-<div class="menu-item"><a href="coursework.html">Coursework</a></div>
+<div class="menu-item"><a href="research.html">Research</a></div>
 <div class="menu-item"><a href="resume.html">CV/Resume</a></div>
 <div class="menu-item"><a href="internship.html">Internship&nbsp;Opp.</a></div>
 <div class="menu-item"><a href="misc.html" class="current">Misc</a></div>
@@ -23,18 +22,35 @@
 <div id="toptitle">
 <h1>Misc.</h1>
 </div>
-<h2>Review activities</h2>
+<h2>Relevant Courseworks</h2>
+<ul>
+<li><p><b>Machine Learning/Reinforcement Learning</b>: Artificial Intelligent (CS221), Machine Learning (CS229), Statistical Learning Theory (CS229T), Reinforcement Learning (CS234 and MS&amp;E 338), etc.</p>
+</li>
+<li><p><b>Optimization/Control</b>: Convex Optimization 1 & 2, Introduction to Optimization Theory, Large-scale Numerical Optimization, Dynamic Programming and Optimal Control, Linear Dynamical System, etc.</p>
+</li>
+<li><p><b>Information Theory</b>: Information Theory, Universal Schemes in Information Theory, Network Information Theory.</p>
+</li>
+<li><p><b>Statistics/Mathematics</b>: Theory of Probability A, Theory of Statistics B, Numerical Linear Algebra, Real Analysis 1&amp;2, Lebesque Integral, Differential Geometry, etc.</p>
+</li>
+</ul>
+<h2>Organizing Activities</h2>
+<ul>
+<li><p>SIGKDD International Workshop on Mining and Learning from Time Series &ndash; Deep Forecasting: Models, Interpretability, and Application, 2022. </p>
+</li>
+</ul>
+<h2>Review Activities</h2>
 <ul>
 <li><p>Journal of Machine Learning Research (JMLR),  
 Neural Information Processing Systems (NeurIPS),  
 International Conference on Learning Representations (ICLR),
+International Conference on Machine Learning (ICML),
+Journal of Artificial Intelligence Research (JAIR), 
+Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 
 SIAM Journal on Mathematics of Data Science (SIMODS), 
-International Conference on Machine Learning and Applications (ICMLA),
-Neural  Processing Letter (NEPL), 
-Journal of Artificial Intelligence Research (JAIR), Journal of Scientific Computing (JOSC)</p>
+Journal of Scientific Computing (JOSC)</p>
 </li>
 </ul>
-<h2>Community activities</h2>
+<h2>Community Activities</h2>
 <ul>
 <li><p>President of Korean Electrical Engineering Association at Stanford, Member of Korean Gates Society at Stanford, Committee of Stanford-KAIST-Silicon Valley Association</p>
 </li>
@@ -43,18 +59,16 @@ Journal of Artificial Intelligence Research (JAIR), Journal of Scientific Comput
 </ul>
 <h2>Collaborators</h2>
 <ul>
-<li><p>AWS AI Labs: Bernie Wang, Jan Gasthaus, Tim Januschowski, etc.  </p>
+<li><p>Amazon: Bernie Wang, Jan Gasthaus, Luke Huan, Dean Forster, Dominik Janzing.</p>
 </li>
-<li><p>Amazon: Dean Forster, Dominik Janzing, etc.</p>
+<li><p>Acamedia: Stephen Boyd (Stanford), Jure Leskovec (Stanford), Hongseok Namkoong (Columbia B. Scool), Ernest Ryu (SNU), Andrew Gordon Wilson (NYU).</p>
 </li>
-<li><p>Acamedia: Stephen Boyd (Stanford), Jure Leskovec (Stanford), Hongseok Namkoong (Columbia B. Scool), Ernest Ryu (SNU).</p>
-</li>
-<li><p>Interns: Arun Jambulapati (Stanford), Shantnu Gupta (CMU) Taeho Yoon (SNU), Yucheng Lu (Cornell) Xiaoyong Jin (UCSB).</p>
+<li><p>Interns: Charlie Marx (Stanford), Yuhao Ding (UC Berkeley), Linbo Liu (UCSD), Sanae Lotfi (NYU), Jiayao Zhang (UPenn), Arun Jambulapati (Stanford), Kelvin Kan (Emory), Shantnu Gupta (CMU), Taeho Yoon (SNU), Yucheng Lu (Cornell) Xiaoyong Jin (UCSB).</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-18 11:47:28 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-07-29 22:26:07 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
