--- a/research.html
+++ b/research.html
@@ -13,8 +13,7 @@
 <td id="layout-menu">
 <div class="menu-category">Youngsuk Park</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="research_by_year.html">Research</a></div>
-<div class="menu-item"><a href="coursework.html">Coursework</a></div>
+<div class="menu-item"><a href="research.html">Research</a></div>
 <div class="menu-item"><a href="resume.html">CV/Resume</a></div>
 <div class="menu-item"><a href="internship.html">Internship&nbsp;Opp.</a></div>
 <div class="menu-item"><a href="misc.html">Misc</a></div>
@@ -23,32 +22,81 @@
 <div id="toptitle">
 <h1>Research</h1>
 </div>
-<h2>Sorted by Topics</h2>
-<p><b>Time-series Forecasting</b></p>
+<h2>Working Papers </h2>
 <ul>
-<li><p>Learning the Quantile Function without Quantile Crossing for Distribution-free Time Series Forecasting.<br /> 
-<b>Y. Park</b>, D. Robinson, Y. Wang, J. Gasthaus.<br />
-To appear in <a href="https://sites.google.com/berkeley.edu/dfuq21/">Distribution-free Uncertainty Quantification</a> ICML workshop, 2021.</p>
+<li><p>Testing Causality of High-Dimensional Gaussians.<br />
+
+Under review. </p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2102.06828">Domain Adaptation for Time Series Forecasting via Attention Sharing.</a><br /> 
-X. Jin, <b>Y. Park</b>, D, Robinson, Y. Wang.<br />
-Under review. 
-</p>
+<li><p>Temporal-consistent Optimal Transport for Time Series Alignment.<br />
+
+Under review. </p>
+</li>
+</ul>
+<ul>
+<li><p>Dynamic Ensembling for Probabilistic Time Series Forecasting via Deep Reinforcement Learning. <br /> 
+In preparation.<br /></p>
+</li>
+</ul>
+<ul>
+<li><p>On the Consistent Shapley-based Explainability for Deep Probabilistic Forecasting via Hypothesis Testing.<br /> 
+In preparation.<br /></p>
+</li>
+</ul>
+<ul>
+<li><p>On the distribution Shift of Time Series beyond Non-Stationarity.<br /> 
+In preparation.<br /></p>
+</li>
+</ul>
+<ul>
+<li><p>Inferring Cross-Modal Causal Effects in Time Series.<br /> 
+In preparation.<br /></p>
+</li>
+</ul>
+<h2>Refereed Journals and Conference Proceedings</h2>
+<ul>
+<li><p><a href="https://arxiv.org/pdf/2207.09572.pdf">Towards Robust Multivariate Time-Series Forecasting: Adversarial Attacks and Defense Mechanisms.</a> <br />
+L. Lui,  <b>Y. Park</b>, N. Hoang, J. Huan. <br />
+KDD Workshop on Mining and Learning from Time Series 2022. </p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://proceedings.mlr.press/v162/jin22d/jin22d.pdf">Domain Adaptation for Time Series Forecasting via Attention Sharing.</a><br /> 
+X. Jin, <b>Y. Park</b>, D. Robinson, Y. Wang.<br />
+<i>Proceedings of International Conference on Machine Learning (ICML)</i>, 2022.<br /></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2111.06581">Learning Quantile Functions without Quantile Crossing for Distribution-free Time Series Forecasting.</a><br /> 
+<b>Y. Park</b>, D. Robinson, J. Gasthaus, Y. Wang.<br />
+<i>Proceedings of International Conference on Artificial Intelligence and Statistics (AISTATS)</i>, 2022.</p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2202.11316">Multivariate Quantile Functions for Forecasting.</a><br />
+K. Kan, F. Aubet, T. Januschowski, <b>Y. Park</b>, K. Benidis, J. Gasthaus.<br />
+<i>Proceedings of International Conference on Artificial Intelligence and Statistics (AISTATS)</i>, 2022. <br />
+<b>Selected as an oral, 2.6% of all submissions.</b></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2202.11910">Robust Probabilistic Time Series Forecasting.</a><br />
+T. Yoon, <b>Y. Park</b>, E. Ryu, Y. Wang.<br />
+<i>Proceedings of International Conference on Artificial Intelligence and Statistics (AISTATS)</i>, 2022.</p>
 </li>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2103.02062">Variance Reduced Training with Stratified Sampling for Forecasting Models.</a><br />
 Y. Lu, <b>Y. Park</b>, L. Cheng, Y. Wang, D. Foster.<br />
-To appear in <i>International Conference on Machine Learning (ICML)</i>, 2021.</p>
+<i>Proceedings of International Conference on Machine Learning (ICML)</i>, 2021.<br /></p>
 </li>
 </ul>
-<p><b>Reinforcement Learning and Optimal Control</b></p>
 <ul>
 <li><p><a href="http://proceedings.mlr.press/v119/park20c/park20c.pdf">Structured Policy Iteration for Linear Quadratic Regulator.</a> <br />
 <b>Y. Park</b>, Z. Wen, R. Rossi, G. Wu, H. Zhao.<br />
-<i>Proceedings of International Conference on Machine Learning</i> (ICML), 2020.<br />
+<i>Proceedings of International Conference on Machine Learning (ICML)</i>, 2020.<br />
 [<a href="papers/spi_lqr_slide.pdf">Slide</a>], [<a href="papers/spi_lqr_supp.pdf">Supplementary materials</a>], [<a href="https://arxiv.org/abs/2007.06202">arXiv</a>]</p>
 </li>
 </ul>
@@ -59,23 +107,10 @@ J. Kim, <b>Y. Park</b>, J. Fox, S. Boyd, and W. Dally. <br />
 </li>
 </ul>
 <ul>
-<li><p><a href="papers/LQR_Cloud.pdf">Linear Quadratic Regulator for Resource-Efficient Cloud Services.</a> <br />
-<b>Y. Park</b>, K. Mahadik, R. Rossi, G. Wu, and H. Zhao. <br />
-<i>Proceedings of ACM Symposium on Cloud Computing (SoCC)</i>, 2019. </p>
-</li>
-</ul>
-<ul>
-<li><p>Convergent Actor-Critic under Off-policy and Function Approximation. <br />
-H. Maei and <b>Y. Park</b> <br />
-[<a href="papers/gac_poster.pdf">Slide</a>].</p>
-</li>
-</ul>
-<p><b>Convex Optimization</b></p>
-<ul>
 <li><p><a href="https://arxiv.org/abs/1910.07056">Variable Metric Proximal Gradient Method with Diagonal Barzilai-Borwein Stepsize.</a> <br />
 <b>Y. Park</b>, S. Dhar, S. Boyd, and M. Shah. <br />
 <i>Proceedings of International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</i>, 2020. <br /> 
-[<a href="https://arxiv.org/abs/1910.07056">arXiv (long version)</a>], [<a href="papers/vmpg_icassp.pdf">ICASSP</a>], [<a href="http://www.stanford.edu/~youngsuk/papers/nips_vmpg.pdf">NeurIPS Workshop</a>]</p>
+[<a href="https://arxiv.org/abs/1910.07056">arXiv (long version)</a>], [<a href="papers/vmpg_icassp.pdf">ICASSP version</a>]</p>
 </li>
 </ul>
 <ul>
@@ -85,11 +120,10 @@ H. Maei and <b>Y. Park</b> <br />
 [<a href="https://arxiv.org/abs/1810.11167">arXiv</a>]</p>
 </li>
 </ul>
-<p><b>Machine Learning</b> </p>
 <ul>
-<li><p>Structured Neural Inference for Undirected Graphical Model from Heterogeneous Data.  <br />
-<b>Y. Park</b> et al. <br />
-In preparation.</p>
+<li><p><a href="papers/LQR_Cloud.pdf">Linear Quadratic Regulator for Resource-Efficient Cloud Services.</a> <br />
+<b>Y. Park</b>, K. Mahadik, R. Rossi, G. Wu, and H. Zhao. <br />
+<i>Proceedings of ACM Symposium on Cloud Computing (SoCC)</i>, 2019. </p>
 </li>
 </ul>
 <ul>
@@ -107,18 +141,22 @@ D. Hallac, <b>Y. Park</b>, S. Boyd, and J. Leskovec. <br />
 </p>
 </li>
 </ul>
-<p><b>Other Topics</b></p>
+<p><b>Others</b></p>
 <ul>
+<li><p>Convergent Actor-Critic under Off-policy and Function Approximation. 
+H. Maei and <b>Y. Park</b>, 
+[<a href="papers/gac_poster.pdf">Slide</a>].</p>
+</li>
 <li><p>Universal Loseless Compression: Context Tree Weighting. [<a href="papers/slide_universal_compression.pdf">Slides</a>]</p>
 </li>
 <li><p>Hypercontractivity, Maximal Correlation, and Non-cooperative Simulation. [<a href="papers/slide_measure_correlation.pdf">Slides</a>, <a href="papers/report_measure_correlation.pdf">Report</a>]</p>
 </li>
-<li><p>Successive Lossy Compression for Laplacian Source. [<a href="papers/slide_lossycompression.pdf">Slides</a>, <a href="papers/report_lossycompression.pdf">Report</a>]</p>
+<li><p>Successive Lossy Compression for Laplacian Source. [<a href="papers/slide_lossycompression.pdf">Slides</a>, <a href="papers/report_lossycompression.pdf">Report</a>, <a href="acknowledgement_lossy.html">Acknowledgement</a>]</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-18 11:47:28 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-07-29 22:26:07 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
