--- a/resume.html
+++ b/resume.html
@@ -13,8 +13,7 @@
 <td id="layout-menu">
 <div class="menu-category">Youngsuk Park</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="research_by_year.html">Research</a></div>
-<div class="menu-item"><a href="coursework.html">Coursework</a></div>
+<div class="menu-item"><a href="research.html">Research</a></div>
 <div class="menu-item"><a href="resume.html" class="current">CV/Resume</a></div>
 <div class="menu-item"><a href="internship.html">Internship&nbsp;Opp.</a></div>
 <div class="menu-item"><a href="misc.html">Misc</a></div>
@@ -26,7 +25,7 @@
 <p><a href="ypark_cv.pdf">CV/Resume.</a></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-18 11:47:28 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-07-29 22:26:07 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
