--- a/index.html
+++ b/index.html
@@ -39,7 +39,19 @@ Email: <a href="mailto:youngsuk@cs.stanford.edu">youngsuk@cs.stanford.edu</a><br
 <h2>News</h2>
 <div class="infoblock">
 <div class="blockcontent">
-<p>July. 2022. The work on robust multivariate probabilistic forecasting appears at KDD Time-Series workshop. </p>
+<p>Oct. 2022. Four papers on causality, explainability, and ensemble theory were submitted to AISTATS. </p>
+</div></div>
+<div class="infoblock">
+<div class="blockcontent">
+<p>Oct. 2022. Two papers on transformer and adaptive forecaster were submitted to NeurIPS workshops. </p>
+</div></div>
+<div class="infoblock">
+<div class="blockcontent">
+<p>Sept. 2022. Two papers on robust forecasting and temporal dynamic ensemble via RL were submitted to ICLR. </p>
+</div></div>
+<div class="infoblock">
+<div class="blockcontent">
+<p>July. 2022. The paper on robust multivariate probabilistic forecasting appears at KDD Time-Series workshop. </p>
 </div></div>
 <div class="infoblock">
 <div class="blockcontent">
@@ -97,7 +109,7 @@ Email: <a href="mailto:youngsuk@cs.stanford.edu">youngsuk@cs.stanford.edu</a><br
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-07-29 22:26:07 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-10-14 10:00:05 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
