--- a/research.html
+++ b/research.html
@@ -13,7 +13,7 @@
 <td id="layout-menu">
 <div class="menu-category">Youngsuk Park</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="research.html">Research</a></div>
+<div class="menu-item"><a href="research.html" class="current">Research</a></div>
 <div class="menu-item"><a href="resume.html">CV/Resume</a></div>
 <div class="menu-item"><a href="internship.html">Internship&nbsp;Opp.</a></div>
 <div class="menu-item"><a href="misc.html">Misc</a></div>
@@ -24,9 +24,29 @@
 </div>
 <h2>Working Papers </h2>
 <ul>
-<li><p>Testing Causality of High-Dimensional Gaussians.<br />
+<li><p>But Are You Sure? An Uncertainty-Aware Perspective on Explainable AI.<br /> 
+Under review. </p>
+</li>
+</ul>
+<ul>
+<li><p>Testing Causality of High-Dimensional Data.<br />
 
 Under review. </p>
+</li>
+</ul>
+<ul>
+<li><p>Reverse Causal Inference on Panel Data via Generalized Synthetic Control.<br /> 
+Under review.</p>
+</li>
+</ul>
+<ul>
+<li><p>Dynamic Ensembling for Probabilistic Time Series Forecasting via Deep Reinforcement Learning. <br /> 
+Under review.<br /></p>
+</li>
+</ul>
+<ul>
+<li><p>Adaptive Sampling for Probabilistic Forecasting under Distribution Shift.<br /> 
+Under review.<br /></p>
 </li>
 </ul>
 <ul>
@@ -36,23 +56,8 @@ Under review. </p>
 </li>
 </ul>
 <ul>
-<li><p>Dynamic Ensembling for Probabilistic Time Series Forecasting via Deep Reinforcement Learning. <br /> 
-In preparation.<br /></p>
-</li>
-</ul>
-<ul>
-<li><p>On the Consistent Shapley-based Explainability for Deep Probabilistic Forecasting via Hypothesis Testing.<br /> 
-In preparation.<br /></p>
-</li>
-</ul>
-<ul>
-<li><p>On the distribution Shift of Time Series beyond Non-Stationarity.<br /> 
-In preparation.<br /></p>
-</li>
-</ul>
-<ul>
-<li><p>Inferring Cross-Modal Causal Effects in Time Series.<br /> 
-In preparation.<br /></p>
+<li><p>First Detrend then Attend: Rethinking Attention for Time Series Forecasting.<br />
+Under review.</p>
 </li>
 </ul>
 <h2>Refereed Journals and Conference Proceedings</h2>
@@ -156,7 +161,7 @@ H. Maei and <b>Y. Park</b>,
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-07-29 22:26:07 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-10-14 10:00:30 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
