--- a/internship.html
+++ b/internship.html
@@ -31,11 +31,13 @@
 <ul>
 <li><p>explainable AI, causal inference,</p>
 </li>
-<li><p>large scale representation learning,</p>
+<li><p>large scale representation learning for foundation model,</p>
 </li>
-<li><p>robust modeling against perturbations, e.g., adversarial attack, distribution shift,</p>
+<li><p>robustness, distribution shift, OOD,</p>
 </li>
-<li><p>off-policy for reinforcement learning, what-if analysis,</p>
+<li><p>reinforcement learning for decision making</p>
+</li>
+<li><p>GNN for temporal data</p>
 </li>
 </ul>
 <p>preferably with publication records in
@@ -46,7 +48,7 @@ in top-tier ML/AI conferences, e.g., ICML, NeurIPS, ICLR, AISTATS, KDD.</p>
 <p>If you are also interested in the areas of personalization, recommendation systems, time series anomaly, feel free to reach me out so that I can forward to the teams of interest.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-14 10:21:48 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-10-14 10:31:50 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
