update research page

--- a/research.html
+++ b/research.html
@@ -22,7 +22,7 @@
 <div id="toptitle">
 <h1>Research</h1>
 </div>
-<h2>Working Papers </h2>
+<h2>Preprints under Review </h2>
 <ul>
 <li><p>But Are You Sure? An Uncertainty-Aware Perspective on Explainable AI.<br /> 
 Under review. </p>
@@ -60,7 +60,7 @@ Under review. </p>
 Under review.</p>
 </li>
 </ul>
-<h2>Refereed Journals and Conference Proceedings</h2>
+<h2>Published Papers (by Year)</h2>
 <ul>
 <li><p><a href="https://arxiv.org/pdf/2207.09572.pdf">Towards Robust Multivariate Time-Series Forecasting: Adversarial Attacks and Defense Mechanisms.</a> <br />
 L. Lui,  <b>Y. Park</b>, N. Hoang, J. Huan. <br />
@@ -161,7 +161,7 @@ H. Maei and <b>Y. Park</b>,
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-14 10:00:30 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-10-14 10:33:30 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
