--- a/internship.html
+++ b/internship.html
@@ -29,15 +29,17 @@
 <h2>Ideal Quality of Candidates</h2>
 <p>Strong background in one or more of the following machine learning areas, but not limited to,</p>
 <ul>
-<li><p>explainable AI, causal inference,</p>
+<li><p>explainable AI (XAI), causal inference,</p>
 </li>
-<li><p>large scale representation learning for foundation model,</p>
+<li><p>foundation models, represetnation learning,</p>
 </li>
 <li><p>robustness, distribution shift, OOD,</p>
 </li>
-<li><p>reinforcement learning for decision making</p>
+<li><p>reinforcement learning for decision making,</p>
 </li>
-<li><p>GNN for temporal data</p>
+<li><p>Graph Neural Network (GNN) for spatial-temporal data,</p>
+</li>
+<li><p>non-convex optimization,</p>
 </li>
 </ul>
 <p>preferably with publication records in
@@ -48,7 +50,7 @@ in top-tier ML/AI conferences, e.g., ICML, NeurIPS, ICLR, AISTATS, KDD.</p>
 <p>If you are also interested in the areas of personalization, recommendation systems, time series anomaly, feel free to reach me out so that I can forward to the teams of interest.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-14 10:31:50 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-10-16 18:25:03 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
