--- a/misc.html
+++ b/misc.html
@@ -21,21 +21,21 @@
 <td id="layout-content">
 <div id="toptitle">
 <h1>Misc.</h1>
+<div id="subtitle">
+
+
+
+
 </div>
-<h2>Relevant Courseworks</h2>
-<ul>
-<li><p><b>Machine Learning/Reinforcement Learning</b>: Artificial Intelligent (CS221), Machine Learning (CS229), Statistical Learning Theory (CS229T), Reinforcement Learning (CS234 and MS&amp;E 338), etc.</p>
-</li>
-<li><p><b>Optimization/Control</b>: Convex Optimization 1 & 2, Introduction to Optimization Theory, Large-scale Numerical Optimization, Dynamic Programming and Optimal Control, Linear Dynamical System, etc.</p>
-</li>
-<li><p><b>Information Theory</b>: Information Theory, Universal Schemes in Information Theory, Network Information Theory.</p>
-</li>
-<li><p><b>Statistics/Mathematics</b>: Theory of Probability A, Theory of Statistics B, Numerical Linear Algebra, Real Analysis 1&amp;2, Lebesque Integral, Differential Geometry, etc.</p>
-</li>
-</ul>
+</div>
 <h2>Organizing Activities</h2>
 <ul>
 <li><p>SIGKDD International Workshop on Mining and Learning from Time Series &ndash; Deep Forecasting: Models, Interpretability, and Application, 2022. </p>
+</li>
+</ul>
+<h2>Tutorial</h2>
+<ul>
+<li><p>Deep Time Series Forecasting, IEEE Big Data 2022, Osaka, Japan.</p>
 </li>
 </ul>
 <h2>Review Activities</h2>
@@ -52,6 +52,10 @@ Journal of Scientific Computing (JOSC)</p>
 </ul>
 <h2>Community Activities</h2>
 <ul>
+<li><p>Host of Time Series Seminar in AWS AI Labs where 25+ Scientists Weekly attend</p>
+</li>
+<li><p>Amazon Advisor: Dedicated Mentor for 20+ Junior Scientists and Interns</p>
+</li>
 <li><p>President of Korean Electrical Engineering Association at Stanford, Member of Korean Gates Society at Stanford, Committee of Stanford-KAIST-Silicon Valley Association</p>
 </li>
 <li><p>President of Korean Basketball Association at Stanford</p>
@@ -61,14 +65,14 @@ Journal of Scientific Computing (JOSC)</p>
 <ul>
 <li><p>Amazon: Bernie Wang, Jan Gasthaus, Luke Huan, Dean Forster, Dominik Janzing.</p>
 </li>
-<li><p>Acamedia: Stephen Boyd (Stanford), Jure Leskovec (Stanford), Hongseok Namkoong (Columbia B. Scool), Ernest Ryu (SNU), Andrew Gordon Wilson (NYU).</p>
+<li><p>Acamedia: Stephen Boyd (Stanford), Jure Leskovec (Stanford), Stefano Ermon (Stanford), Hongseok Namkoong (Columbia B. Scool), Ernest Ryu (SNU), Andrew Gordon Wilson (NYU), Dan Roth (UPenn).</p>
 </li>
-<li><p>Interns: Charlie Marx (Stanford), Yuhao Ding (UC Berkeley), Linbo Liu (UCSD), Sanae Lotfi (NYU), Jiayao Zhang (UPenn), Arun Jambulapati (Stanford), Kelvin Kan (Emory), Shantnu Gupta (CMU), Taeho Yoon (SNU), Yucheng Lu (Cornell) Xiaoyong Jin (UCSB).</p>
+<li><p>Interns: Charlie Marx (Stanford), Yuhao Ding (UC Berkeley), Linbo Liu (UCSD), Sanae Lotfi (NYU), Jiayao Zhang (UPenn), Luca Masserano (CMU), Xiyuan Zhang (UCSD), Arun Jambulapati (Stanford), Kelvin Kan (Emory), Shantnu Gupta (CMU), Taeho Yoon (SNU), Yucheng Lu (Cornell), Xiaoyong Jin (UCSB).</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-07-29 22:26:07 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-10-16 18:25:03 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
