--- a/research.html
+++ b/research.html
@@ -60,6 +60,11 @@ Under review. </p>
 Under review.</p>
 </li>
 </ul>
+<ul>
+<li><p>Theoretical Guarantees of Learning Ensembling Strategies with Applications to Time Series Forecasting.<br />
+Under review.</p>
+</li>
+</ul>
 <h2>Published Papers (by Year)</h2>
 <ul>
 <li><p><a href="https://arxiv.org/pdf/2207.09572.pdf">Towards Robust Multivariate Time-Series Forecasting: Adversarial Attacks and Defense Mechanisms.</a> <br />
@@ -161,7 +166,7 @@ H. Maei and <b>Y. Park</b>,
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-14 10:33:30 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-10-16 18:25:03 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
