update internship page

--- a/internship.html
+++ b/internship.html
@@ -23,15 +23,15 @@
 <h1>Internship Opportunities</h1>
 </div>
 <h2>About Internship</h2>
-<p>ML and Forecast science team at AWS AI Labs is looking for motivated research interns for summer 2022. The internship is minimum 12-14 weeks and requires PhD candidacy in relevant areas. The main goal of this internship is to develop scalable and reliable time series analysis methods, reflecting various empirical or theoretical machine learning topics, along with some publication artifacts in venues of top-tier conferences at the end of internship.</p>
-<h2>About ML and Forecast Science team in AWS AI Labs</h2>
-<p>Regarding to our team, please refer to our recent work in <a href="https://github.com/awslabs/gluon-ts/blob/master/REFERENCES.md">selected papers</a>.</p>
-<h2>Ideal Quality of Candidates</h2>
+<p>Forecast science team in AWS AI Labs is looking for motivated research interns for summer 2022. The internship is minimum 12-14 weeks and requires PhD candidacy in relevant areas. The main goal of this internship is from developing scalable and reliable methods on time series data by leveraging ML and Stats knowledge to establishing theoretical foundations, ultimately transforming scientific discovery to a publication artifact at the end of internship.</p>
+<h2>About Forecast Science team in AWS AI Labs</h2>
+<p>Regarding to our team, please refer to our <a href="https://youngsuk0723.github.io/research.html">recent submissions</a> and <a href="https://github.com/awslabs/gluonts/blob/dev/REFERENCES.md">collected papers</a>.</p>
+<h2>Quanlifications of Potential Candidates</h2>
 <p>Strong background in one or more of the following machine learning areas, but not limited to,</p>
 <ul>
 <li><p>explainable AI (XAI), causal inference,</p>
 </li>
-<li><p>foundation models, represetnation learning,</p>
+<li><p>foundation model, multi-modal represetnation learning,</p>
 </li>
 <li><p>robustness, distribution shift, OOD,</p>
 </li>
@@ -42,15 +42,14 @@
 <li><p>non-convex optimization,</p>
 </li>
 </ul>
-<p>preferably with publication records in
-in top-tier ML/AI conferences, e.g., ICML, NeurIPS, ICLR, AISTATS, KDD.</p>
+<p>preferably with publication records in top-tier ML/AI conferences, e.g., ICML, NeurIPS, ICLR, AISTATS, KDD.</p>
 <h2>Applications</h2>
 <p>If you are interested, feel free to send <a href="mailto:youngsuk@cs.stanford.edu">youngsuk@cs.stanford.edu</a> an email attached with your C.V. and short introduction.</p>
-<h1>Misc.</h1>
+<h2>Misc.</h2>
 <p>If you are also interested in the areas of personalization, recommendation systems, time series anomaly, feel free to reach me out so that I can forward to the teams of interest.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-16 18:25:03 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-10-17 18:19:09 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
