--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="research.html">Research</a></div>
 <div class="menu-item"><a href="resume.html">CV/Resume</a></div>
+<div class="menu-item"><a href="activities.html">Activities</a></div>
 <div class="menu-item"><a href="internship.html">Internship&nbsp;Opp.</a></div>
-<div class="menu-item"><a href="misc.html">Misc</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -39,15 +39,11 @@ Email: <a href="mailto:youngsuk@cs.stanford.edu">youngsuk@cs.stanford.edu</a><br
 <h2>News</h2>
 <div class="infoblock">
 <div class="blockcontent">
-<p>Oct. 2022. Four papers on causality, explainability, and ensemble theory were submitted to AISTATS. </p>
+<p>Jan. 2023. Two paper on XAI and robust forecasting were accepted at AISTATS and ICLR, respectively. </p>
 </div></div>
 <div class="infoblock">
 <div class="blockcontent">
-<p>Oct. 2022. Two papers on transformer and adaptive forecaster were submitted to NeurIPS workshops. </p>
-</div></div>
-<div class="infoblock">
-<div class="blockcontent">
-<p>Sept. 2022. Two papers on robust forecasting and temporal dynamic ensemble via RL were submitted to ICLR. </p>
+<p>Dec. 2022. Three papers on transformer and adaptive forecasting, and causality appeared in NeurIPS workshops. </p>
 </div></div>
 <div class="infoblock">
 <div class="blockcontent">
@@ -101,7 +97,7 @@ Email: <a href="mailto:youngsuk@cs.stanford.edu">youngsuk@cs.stanford.edu</a><br
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-16 18:25:03 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-01-20 23:24:57 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
