--- a/internship.html
+++ b/internship.html
@@ -15,8 +15,8 @@
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="research.html">Research</a></div>
 <div class="menu-item"><a href="resume.html">CV/Resume</a></div>
+<div class="menu-item"><a href="activities.html">Activities</a></div>
 <div class="menu-item"><a href="internship.html" class="current">Internship&nbsp;Opp.</a></div>
-<div class="menu-item"><a href="misc.html">Misc</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -49,7 +49,7 @@
 <p>If you are also interested in the areas of personalization, recommendation systems, time series anomaly, feel free to reach me out so that I can forward to the teams of interest.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-17 18:19:09 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-01-20 23:24:57 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
