--- a/research.html
+++ b/research.html
@@ -15,17 +15,30 @@
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="research.html" class="current">Research</a></div>
 <div class="menu-item"><a href="resume.html">CV/Resume</a></div>
+<div class="menu-item"><a href="activities.html">Activities</a></div>
 <div class="menu-item"><a href="internship.html">Internship&nbsp;Opp.</a></div>
-<div class="menu-item"><a href="misc.html">Misc</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
 <h1>Research</h1>
 </div>
-<h2>Preprints under Review </h2>
+<h2>Preprints under Review or Workshop Papers</h2>
 <ul>
-<li><p>But Are You Sure? An Uncertainty-Aware Perspective on Explainable AI.<br /> 
-Under review. </p>
+<li><p><a href="https://www.amazon.science/publications/towards-reverse-causal-inference-on-panel-data-precise-formulation-and-challenges">Reverse Causal Inference on Panel Data via Generalized Synthetic Control.</a><br /> 
+J. Zhang, <b>Y. Park</b>, D. Robinson, D. Roth, Y. Wang.<br />
+Under review. Shorter version at NeurIPS Workshop on Causal Dynamic System 2022.</p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://www.amazon.science/publications/adaptive-sampling-for-probabilistic-forecasting-under-distribution-shift">Adaptive Sampling for Probabilistic Forecasting under Distribution Shift.</a><br />
+L. Masserano, S. Rangapuram, S. Kapoor, R. Nirwan, <b>Y. Park</b>, M. Bohlke-Schneider.<br /> 
+Under review. Shorter version at NeurIPS 2022 Workshop on Distribution Shifts.<br /></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://www.amazon.science/publications/first-de-trend-then-attend-rethinking-attention-for-time-series-forecasting">First Detrend then Attend: Rethinking Attention for Time Series Forecasting.</a><br />
+X. Zhang, X. Jin, K. Gopalswamy, G. Gupta, <b>Y. Park</b>, D. Robinson, Y. Wang.<br />
+Under review. Shorter version at NeurIPS 2022 Workshop on All Things Attention.</p>
 </li>
 </ul>
 <ul>
@@ -35,18 +48,13 @@ Under review. </p>
 </li>
 </ul>
 <ul>
-<li><p>Reverse Causal Inference on Panel Data via Generalized Synthetic Control.<br /> 
-Under review.</p>
-</li>
-</ul>
-<ul>
 <li><p>Dynamic Ensembling for Probabilistic Time Series Forecasting via Deep Reinforcement Learning. <br /> 
 Under review.<br /></p>
 </li>
 </ul>
 <ul>
-<li><p>Adaptive Sampling for Probabilistic Forecasting under Distribution Shift.<br /> 
-Under review.<br /></p>
+<li><p>Theoretical Guarantees of Learning Ensembling Strategies with Applications to Time Series Forecasting.<br />
+Under review.</p>
 </li>
 </ul>
 <ul>
@@ -55,21 +63,17 @@ Under review.<br /></p>
 Under review. </p>
 </li>
 </ul>
+<h2>Published Papers </h2>
 <ul>
-<li><p>First Detrend then Attend: Rethinking Attention for Time Series Forecasting.<br />
-Under review.</p>
+<li><p><a href="https://www.amazon.science/publications/but-are-you-sure-an-uncertainty-aware-perspective-on-explainable-ai">But Are You Sure? An Uncertainty-Aware Perspective on Explainable AI.</a><br /> 
+C. Marx,  <b>Y. Park</b>, H. Hasson, Y. Wang, S. Ermon, J. Huan. <br /> 
+Accepted to <i>Proceedings of International Conference on Learning Representation (ICLR)</i>, 2023.</p>
 </li>
 </ul>
-<ul>
-<li><p>Theoretical Guarantees of Learning Ensembling Strategies with Applications to Time Series Forecasting.<br />
-Under review.</p>
-</li>
-</ul>
-<h2>Published Papers (by Year)</h2>
 <ul>
 <li><p><a href="https://arxiv.org/pdf/2207.09572.pdf">Towards Robust Multivariate Time-Series Forecasting: Adversarial Attacks and Defense Mechanisms.</a> <br />
-L. Lui,  <b>Y. Park</b>, N. Hoang, J. Huan. <br />
-KDD Workshop on Mining and Learning from Time Series 2022. </p>
+L. Lui,  <b>Y. Park</b>, N. Hoang, H. Hasson, J. Huan. <br />
+Accepted to <i>Proceedings of International Conference on Learning Representation (ICLR)</i>, 2023.  </p>
 </li>
 </ul>
 <ul>
@@ -166,7 +170,7 @@ H. Maei and <b>Y. Park</b>,
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-16 18:25:03 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-01-20 23:24:57 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
