--- a/resume.html
+++ b/resume.html
@@ -15,8 +15,8 @@
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="research.html">Research</a></div>
 <div class="menu-item"><a href="resume.html" class="current">CV/Resume</a></div>
+<div class="menu-item"><a href="activities.html">Activities</a></div>
 <div class="menu-item"><a href="internship.html">Internship&nbsp;Opp.</a></div>
-<div class="menu-item"><a href="misc.html">Misc</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -25,7 +25,7 @@
 <p><a href="ypark_cv.pdf">CV/Resume.</a></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-16 18:25:03 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-01-20 23:24:57 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
