--- a/activities.html
+++ b/activities.html
@@ -15,8 +15,8 @@
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="research.html">Research</a></div>
 <div class="menu-item"><a href="resume.html">CV/Resume</a></div>
+<div class="menu-item"><a href="activities.html" class="current">Activities</a></div>
 <div class="menu-item"><a href="internship.html">Internship&nbsp;Opp.</a></div>
-<div class="menu-item"><a href="misc.html" class="current">Misc</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -28,7 +28,34 @@
 
 </div>
 </div>
-<h2>Organizing Activities</h2>
+<h2>Talks</h2>
+<ul>
+<li><p>Dept. of Computer Science, University of San Diego, San Diego, 2023  </p>
+</li>
+<li><p>Amazon Machine Learning Conference (AMLC), Virtual, 2022 </p>
+</li>
+<li><p>AWS AI Labs, Santa Clara, 2022  </p>
+</li>
+<li><p>Amazon Machine Learning Conference, Virtual, 2021 </p>
+</li>
+<li><p>School of Data Science, Seoul National University (SNU),  S. Korea, 2020 </p>
+</li>
+<li><p>Amazon Web Service (AWS) AI, Palo Alto, 2020 </p>
+</li>
+<li><p>Facebook AI, Menlo Park, 2020  </p>
+</li>
+<li><p>Rakuten Research, San Mateo, 2020   </p>
+</li>
+<li><p>Adobe Research, San Jose, 2019   </p>
+</li>
+<li><p>Hyundai AI Labs, Seoul, Korea, 2019 </p>
+</li>
+<li><p>Hyundai Global Forum, San Diego, 2018 </p>
+</li>
+<li><p>Kakao Brain, Bundang, Korea, 2017 </p>
+</li>
+</ul>
+<h2>Organizing Workshops</h2>
 <ul>
 <li><p>SIGKDD International Workshop on Mining and Learning from Time Series &ndash; Deep Forecasting: Models, Interpretability, and Application, 2022. </p>
 </li>
@@ -52,9 +79,9 @@ Journal of Scientific Computing (JOSC)</p>
 </ul>
 <h2>Community Activities</h2>
 <ul>
-<li><p>Host of Time Series Seminar in AWS AI Labs where 25+ Scientists Weekly attend</p>
+<li><p>Host of Weekly Time Series Seminar where 25+ Scientists in AWS AI Labs attend</p>
 </li>
-<li><p>Amazon Advisor: Dedicated Mentor for 20+ Junior Scientists and Interns</p>
+<li><p>Amazon Advisor having been mentoring for 20+ Junior Scientists and Interns</p>
 </li>
 <li><p>President of Korean Electrical Engineering Association at Stanford, Member of Korean Gates Society at Stanford, Committee of Stanford-KAIST-Silicon Valley Association</p>
 </li>
@@ -72,7 +99,7 @@ Journal of Scientific Computing (JOSC)</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-16 18:25:03 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-01-20 23:24:57 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
