Update about and resume sections, update CV

--- a/sections/about.html
+++ b/sections/about.html
@@ -3,7 +3,7 @@
 <h2>Recent News</h2>
 <div class="news-item">
 <div class="news-date">Feb 2026</div>
-<div class="news-content">Three papers accepted to <strong>ICLR</strong>, 2026: MuonBP, Scaling Laws for Inference-Efficient LLMs, and Speculative Decoding</div>
+<div class="news-content">Three papers accepted to <strong>ICLR 2026</strong>: MuonBP, Scaling Laws for Inference-Efficient LLMs, and Speculative Decoding</div>
 </div>
 <div class="news-item">
 <div class="news-date">Feb 2026</div>
@@ -11,7 +11,7 @@
 </div>
 <div class="news-item">
 <div class="news-date">Jan 2026</div>
-<div class="news-content">Paper accepted to <strong>AISTATS</strong>, 2026: Demystifying Transition Matching</div>
+<div class="news-content">Paper accepted to <strong>AISTATS 2026</strong>: Demystifying Transition Matching</div>
 </div>
 </section>
 <section>
