--- a/sections/resume.html
+++ b/sections/resume.html
@@ -37,31 +37,33 @@
 <li>Dissertation: <em>Topics in Convex Optimization for Machine Learning</em></li>
 <li>President of Korean Electrical Engineering Association at Stanford</li>
 </ul>
+
+                            <div style="margin-left: 30px; margin-top: 15px; padding-left: 15px; border-left: 2px solid #e5e7eb;">
+<div style="margin-bottom: 12px;">
+<div style="font-weight: 600; color: #2563eb; font-size: 0.9rem;">2019</div>
+<div style="color: #4b5563; margin-top: 3px;"><strong>Research Intern</strong>, Adobe Research</div>
+<ul style="margin-left: 20px; margin-top: 5px; font-size: 0.95rem;">
+<li>Reinforcement learning for continuous control and cloud resource management</li>
+</ul>
 </div>
+
+                                <div style="margin-bottom: 12px;">
+<div style="font-weight: 600; color: #2563eb; font-size: 0.9rem;">2018</div>
+<div style="color: #4b5563; margin-top: 3px;"><strong>Research Intern</strong>, Criteo AI Lab</div>
+<ul style="margin-left: 20px; margin-top: 5px; font-size: 0.95rem;">
+<li>Off-policy reinforcement learning for recommendation systems</li>
+</ul>
 </div>
-<div class="timeline-item">
-<div class="timeline-year">2019</div>
-<div class="timeline-content">
-<strong>Research Intern</strong>, Adobe Research
-                            <ul style="margin-left: 20px; margin-top: 8px;">
-<li>Focus: Reinforcement learning for continuous control and cloud resource management</li>
+
+                                <div style="margin-bottom: 8px;">
+<div style="font-weight: 600; color: #2563eb; font-size: 0.9rem;">2017</div>
+<div style="color: #4b5563; margin-top: 3px;"><strong>Research Intern</strong>, Bosch Center for AI</div>
+<ul style="margin-left: 20px; margin-top: 5px; font-size: 0.95rem;">
+<li>Diagonal Spectral Stepsize for ML optimization</li>
 </ul>
 </div>
 </div>
-<div class="timeline-item">
-<div class="timeline-year">2018</div>
-<div class="timeline-content">
-<strong>Research Intern</strong>, Criteo AI Lab
-                            <ul style="margin-left: 20px; margin-top: 8px;">
-<li>Focus: Off-policy reinforcement learning for recommendation systems</li>
-</ul>
 </div>
-</div>
-<div class="timeline-item">
-<div class="timeline-year">2017</div>
-<div class="timeline-content">
-<strong>Research Intern</strong>, Bosch Center for AI
-                        </div>
 </div>
 <div class="timeline-item">
 <div class="timeline-year">2016</div>
